Fixed overflow in layout. Now overflow is auto just for main-area

--- a/src/app/layouts/main-layout/main-layout.component.css
+++ b/src/app/layouts/main-layout/main-layout.component.css
@@ -9,6 +9,7 @@
 
   position: relative;
   isolation: isolate;
+  overflow: hidden;
 
   .sidebar-area {
     grid-area: sidebar;
@@ -20,6 +21,7 @@
 
   .main-area {
     grid-area: main;
+    overflow: auto;
   }
 
   @media (width < 768px) {
